--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -1,24 +1,22 @@
 <div class='card'>
   <div class='card-header'>
-    Product list
+    {{pageTitle}}
   </div>
   <div class='card-body'>
     <div class='row'>
       <div class='col-md-2'>Filter by:</div>
       <div class='col-md-4'>
-        <input type='text'
-               [(ngModel)]='listFilter' />
+        <input type='text'/>
       </div>
     </div>
-    <div class='row'
-         *ngIf='listFilter'>
+    <div class='row'>
       <div class='col-md-6'>
         <h4>Filtered by:</h4>
       </div>
     </div>
   </div>
   <div class='table-responsive'>
-    <table class='table'>
+    <table class='table' *ngIf='products.length'>
       <thead>
         <tr>
           <th>
