--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -1,4 +1,4 @@
-﻿<div class="card">
+<div class="card">
   <div class="card-header">
     {{pageTitle}}
   </div>
@@ -12,12 +12,11 @@
 
       <div class="text-center">Developed by:</div>
       <div class="text-center">
-        <h3>Deborah Kurata</h3>
+        <h3>Dorian Margraf</h3>
       </div>
 
-      <div class="text-center">@deborahkurata</div>
       <div class="text-center">
-        <a href="http://www.bit.ly/DeborahKsBlog">www.bit.ly/DeborahKsBlog</a>
+        <a href="https://github.com/Dor-Yan">github.com/Dor-Yan</a>
       </div>
     </div>
   </div>
